syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

package com.example.demo.service.meetingService;

service MeetingManager {
    rpc bookMeeting(Meeting) returns (google.protobuf.Int32Value);
    rpc getUserMeetings(google.protobuf.Int32Value) returns (stream Meeting);
    rpc countMeetings(stream Meeting) returns (google.protobuf.Int32Value);
}

message Meeting {
    int32 id = 1;
    User user = 2;
    google.protobuf.Timestamp time = 4;
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string phoneNumber = 4;
    string deviceID = 5;
}